--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -161,6 +161,8 @@
     "Retífica_Planetária",
     "Retífica_Satélite",
     "Luvas_2915",
-    "Engr_3ª_4ª_2915"
+    "Engr_3ª_4ª_2915",
+    "Vários_2915",
+    "Eixos_2915"
   ]
 }
