--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -75,7 +75,7 @@
         OnSuccess: |-
             =//If(varenviado = 1; Navigate(TelaAnterior.Screen)) //; NewForm(Formperdas);;Navigate(Tel_Edit_Producao));;
             
-            If(varDelta = 0 ,  Navigate(TelaAnterior.Screen) , NewForm('Form Produção') ; Navigate(Tel_Edit_Producao))
+            NewForm('Form Produção') ; Navigate(Tel_Edit_Producao)
         Width: =Parent.Width
         Y: =103
         ZIndex: =5
