--- a/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tel_Edit_Producao.fx.yaml
@@ -45,9 +45,9 @@
             =If('Form Produção'.Mode <> FormMode.New , DisplayMode.Edit , If(varDelta < 0 || varprod_realizada <=0 || LabelAlertaDelta.Visible = true , DisplayMode.Disabled  ,DisplayMode.Edit))
         Height: =88
         Icon: =Icon.Check
-        OnSelect: |
-            =SubmitForm('Form Produção');
-            //Set(varenviado ;1)
+        OnSelect: |-
+            =Set(varenviado ,1);
+            SubmitForm('Form Produção');
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
@@ -75,7 +75,7 @@
         OnSuccess: |-
             =//If(varenviado = 1; Navigate(TelaAnterior.Screen)) //; NewForm(Formperdas);;Navigate(Tel_Edit_Producao));;
             
-            If(varenviado = 1,  NewForm('Form Produção') ; Navigate(Tel_Edit_Producao) , NewForm(Formperdas);Navigate(Tel_Edit_Producao))
+            If(varenviado = 1,  NewForm('Form Produção') ; Navigate(Tel_Edit_Producao) , NewForm(Formperdas) ; Navigate(Tel_Edit_Producao))
         Width: =Parent.Width
         Y: =103
         ZIndex: =5
