--- a/Levantamento de Perdas/Src/Usinagem_Eixo_Prim%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Eixo_Prim%e1rio.fx.yaml
@@ -220,7 +220,7 @@ Usinagem_Eixo_Primário As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "1500572");
+            =Set( varmaquina , "");
             Set( varsetor ,  Label_setor_2.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
