--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -32,12 +32,16 @@ App As appinfo:
          
          */
         
+         { Role: "Tela_Ini_2911",Screen: Tela_Ini_2911 },
+         { Role: "Tela_Ini_2912",Screen: Tela_Ini_2912 },
+         { Role: "Tela_Ini_2913",Screen: Tela_Ini_2913 },
+         { Role: "Tela_Ini_2914",Screen: Tela_Ini_2914 },
+         { Role: "Tela_Ini_2915",Screen: Tela_Ini_2915 },
         
          { Role: "Luvas_2915",Screen: Luvas_2915 },
          { Role: "Engr_3ª_4ª_2915",Screen: Engr_3ª_4ª_2915 },
          { Role: "Eixos_2915",Screen: Eixos_2915 },
          { Role: "Vários_2915",Screen: Vários_2915 },
-        
          { Role: "Retífica_Satélite",Screen: Retífica_Satélite },
          { Role: "Retífica_Planetária",Screen: Retífica_Planetária },
          { Role: "Retífica_Marcha_Ré",Screen: Retífica_Marcha_Ré },
