--- a/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2911.fx.yaml
@@ -102,7 +102,9 @@ Tela_Ini_2911 As screen:
     btn_edit_prod_1 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Producao,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2911");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -126,7 +128,9 @@ Tela_Ini_2911 As screen:
     btn_edit_perdas_1 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Perdas,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2911");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
