--- a/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2912.fx.yaml
@@ -234,7 +234,9 @@ Tela_Ini_2912 As screen:
     btn_edit_prod_2 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Producao,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2912");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -258,7 +260,9 @@ Tela_Ini_2912 As screen:
     btn_edit_perdas_2 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Perdas,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2912");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
