--- a/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2913.fx.yaml
@@ -188,7 +188,9 @@ Tela_Ini_2913 As screen:
     btn_edit_prod_3 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Producao,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2913");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -212,7 +214,9 @@ Tela_Ini_2913 As screen:
     btn_edit_perdas_3 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Perdas,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2913");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
