--- a/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Ini_2915.fx.yaml
@@ -78,7 +78,9 @@ Tela_Ini_2915 As screen:
     btn_edit_prod_5 As button:
         Align: =Align.Right
         Height: =30
-        OnSelect: =Navigate(Tela_Inicial_Producao,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Producao,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2915");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =8
@@ -102,7 +104,9 @@ Tela_Ini_2915 As screen:
     btn_edit_perdas_5 As button:
         Align: =Align.Right
         Height: =32
-        OnSelect: =Navigate(Tela_Inicial_Perdas,ScreenTransition.None)
+        OnSelect: |-
+            =Navigate(Tela_Inicial_Perdas,ScreenTransition.None);
+            Set(vartela , "Tela_Ini_2915");
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingRight: =25
