--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -289,7 +289,15 @@
         Icon: =Icon.Home
         OnSelect: |-
             =Select(Icon2);
-            Back()
+            UpdateContext(
+                    {
+                        TelaAnterior: LookUp(
+                            colRoleKeys,
+                            Role = vartela
+                        )
+                    }
+                );
+                Navigate(TelaAnterior.Screen)
             //Navigate(Tela_acerto_levantamento;ScreenTransition.None);;
             //Navigate(Tela_Inicial_app;ScreenTransition.None)
         PaddingBottom: =22
