--- a/Levantamento de Perdas/Src/Usinagem_Luva_1%aa2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Luva_1%aa2%aa.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Luva_1ª2ª As screen:
 
     Image3_14 As image:
         Height: =968
-        Image: =Usinagem_Luva_1ª2ª_1
+        Image: ='Usinagem_Luva_1ª2ª_2'
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
@@ -70,7 +70,7 @@ Usinagem_Luva_1ª2ª As screen:
         Text: =""
         Width: =155
         X: =471
-        Y: =189
+        Y: =193
         ZIndex: =5
 
     Btnmaq_131 As button:
@@ -96,7 +96,7 @@ Usinagem_Luva_1ª2ª As screen:
         Text: =""
         Width: =155
         X: =471
-        Y: =283
+        Y: =285
         ZIndex: =6
 
     Btnmaq_132 As button:
@@ -110,7 +110,7 @@ Usinagem_Luva_1ª2ª As screen:
             
             //ColorFade(RGBA(56; 96; 178; 1); -20%)
         OnSelect: |
-            =Set( varmaquina , "961501369");
+            =Set( varmaquina , "3352007043");
             Set( varsetor ,  Label_setor_14.Text );
             Set( varute , Text(LookUp(CreateMaquina, varmaquina = CAF).UTE)) ;
             Set( varoperacao , Text(LookUp(CreateMaquina, varmaquina = CAF).OPERACAO));
@@ -121,8 +121,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =377
+        X: =475
+        Y: =380
         ZIndex: =7
 
     Btnmaq_133 As button:
@@ -147,8 +147,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =470
+        X: =475
+        Y: =473
         ZIndex: =8
 
     Btnmaq_134 As button:
@@ -173,8 +173,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =563
+        X: =475
+        Y: =565
         ZIndex: =9
 
     Btnmaq_135 As button:
@@ -199,8 +199,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =656
+        X: =475
+        Y: =660
         ZIndex: =10
 
     Btnmaq_136 As button:
@@ -225,8 +225,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =749
+        X: =475
+        Y: =753
         ZIndex: =11
 
     Btnmaq_137 As button:
@@ -251,8 +251,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =842
+        X: =475
+        Y: =846
         ZIndex: =12
 
     Btnmaq_138 As button:
@@ -277,8 +277,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =935
+        X: =475
+        Y: =940
         ZIndex: =13
 
     Btnmaq_139 As button:
@@ -303,8 +303,8 @@ Usinagem_Luva_1ª2ª As screen:
         Size: =24
         Text: =""
         Width: =155
-        X: =471
-        Y: =1028
+        X: =475
+        Y: =1033
         ZIndex: =14
 
     Btnmaq_140 As button:
@@ -330,6 +330,6 @@ Usinagem_Luva_1ª2ª As screen:
         Text: =""
         Width: =155
         X: =155
-        Y: =935
+        Y: =940
         ZIndex: =15
 
