--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -453,12 +453,16 @@
         Height: =23
         InputTextPlaceholder: ="CAF"
         IsSearchable: =false
-        Items: =Sort(Distinct( Filter(CreateMaquina,(Text(Cbox_UTE.Selected.Result) in UTE) && (Text(Cbox_Setor.Selected.Result) in SETOR)) , CAF ).Result , Result)
+        Items: =listamaquina 
         NoSelectionText: ="CAF"
         OnChange: |-
             =ClearCollect(Listaperdas , Filter(LancamentoPerdas , (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) ));
             ClearCollect(Listaproducao , Filter(LancamentoProducao , (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) ));
             Set( varmaquina , Cbox_Maquina.Selected.Result );
+        OnSelect: |-
+            =ClearCollect( listamaquina , 
+            
+            Sort(Distinct( Filter(CreateMaquina,(Text(Cbox_UTE.Selected.Result) in UTE) && (Text(Cbox_Setor.Selected.Result) in SETOR)) , CAF ).Result , Result))
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingTop: =0
@@ -485,7 +489,6 @@
         DisplayFields: =["Result"]
         Height: =23
         InputTextPlaceholder: ="SETOR"
-        IsSearchable: =false
         Items: =listasetor
         NoSelectionText: ="SETOR"
         OnChange: =Reset(Cbox_Maquina)
@@ -494,7 +497,7 @@
         PaddingLeft: =0
         PaddingTop: =0
         SearchFields: =["Result"]
-        SearchItems: =[]
+        SearchItems: =Search(listasetor,Cbox_Setor.SearchText,"Result")
         SelectMultiple: =false
         Size: =12
         Width: =195
