--- a/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_acerto_levantamento.fx.yaml
@@ -459,20 +459,7 @@
             =ClearCollect(Listaperdas , Filter(LancamentoPerdas , (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) ));
             ClearCollect(Listaproducao , Filter(LancamentoProducao , (MAQUINA = Cbox_Maquina.Selected.Result) && (DATA = LabelDate.Text) ));
             Set( varmaquina , Cbox_Maquina.Selected.Result );
-        OnSelect: |-
-            =ClearCollect(
-                listamaquina,
-                Sort(
-                    Distinct(
-                        Filter(
-                            CreateMaquina,
-                            (Text(Cbox_UTE.Selected.Result) in UTE) && (Text(Cbox_Setor.Selected.Result) in SETOR)
-                        ),
-                        CAF
-                    ).Result,
-                    Result
-                )
-            )
+        OnSelect: =
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingTop: =0
@@ -501,7 +488,21 @@
         InputTextPlaceholder: ="SETOR"
         Items: =listasetor
         NoSelectionText: ="SETOR"
-        OnChange: =Reset(Cbox_Maquina)
+        OnChange: |-
+            =Reset(Cbox_Maquina);
+            ClearCollect(
+                listamaquina,
+                Sort(
+                    Distinct(
+                        Filter(
+                            CreateMaquina,
+                            (Text(Cbox_Setor.Selected.Result) in SETOR)
+                        ),
+                        CAF
+                    ).Result,
+                    Result
+                )
+            )
         OnSelect: |-
             =ClearCollect(
                 listasetor,
@@ -515,7 +516,7 @@
                     ).Result,
                     Result
                 )
-            )
+            ) ;
         PaddingBottom: =0
         PaddingLeft: =0
         PaddingTop: =0
